Bug:  PRD Reviewer:  Self Comments:  Fixed width style of the sidebar tree on IE.
Files:
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -1017,7 +1017,7 @@ body, table td, select
 {
 	background-color: #EAEBE8;
 	padding: 0 0 8px;
-	width: 230px;
+	width: 230px !important;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	overflow: auto;
